--- a/aula-2106/src/components/estilo.css
+++ b/aula-2106/src/components/estilo.css
@@ -1,3 +1,49 @@
+:root {
+    --shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1)
+}
+
 .hello-world {
     font-weight: bold;
+}
+
+main.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    width: 100vw;
+    gap: 1.5rem;
+}
+
+section.button-container {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.numero-aleatorio {
+    padding: 0.5rem 4rem;
+    border-radius: 0.5rem;
+    box-shadow: var(--shadow);
+}
+
+button {
+    box-shadow: var(--shadow);
+}
+
+.btn.btn-numero-aleatorio{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+button svg{
+    color: black;
+    width: 1.5rem;
+}
+
+button>svg{
+    display: inline-flex;
+    gap: 2rem;
+    align-items: center;
 }
