--- a/aula-2106/src/components/lista.css
+++ b/aula-2106/src/components/lista.css
@@ -2,4 +2,13 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    border-bottom: solid 1px rgb(216, 216, 216);
+}
+
+li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
