--- a/8agosto/19/versao_do_salva/src/App.css
+++ b/8agosto/19/versao_do_salva/src/App.css
@@ -5,17 +5,21 @@
   text-align: center;
 }
 
+button:disabled {
+  background-color: red;
+  color: whitesmoke
+}
+
+
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
-
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
-
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -24,7 +28,6 @@
   from {
     transform: rotate(0deg);
   }
-
   to {
     transform: rotate(360deg);
   }
@@ -42,25 +45,4 @@
 
 .read-the-docs {
   color: #888;
-}
-
-button:hover {
-  background: rgb(0, 88, 66);
-  color: white;
-}
-
-button:disabled {
-  background: crimson;
-  color: #2525;
-  cursor: not-allowed;
-}
-
-.loader {
-  animation: l1 1s infinite;
-}
-
-@keyframes l1 {
-  to {
-    transform: rotate(.5turn)
-  }
 }
